--- a/timer.html
+++ b/timer.html
@@ -20,6 +20,8 @@
       <nav class="nav">
         <!-- History link is PIN-gated in JS -->
         <a id="historyLink" class="pill" href="#">History</a>
+        <!-- New: Sound toggle pill -->
+        <a id="toggleSound" class="pill" href="#">Sound: On</a>
         <span id="wakelockStatus" class="pill">Screen lock: off</span>
       </nav>
     </header>
@@ -74,10 +76,8 @@
   <!-- Quotes toast container -->
   <div id="toasts" class="toasts" aria-live="polite" aria-atomic="true"></div>
 
-  <audio id="ding" preload="auto">
-    <source src="data:audio/mp3;base64,//uQZAAAAAAAAAAAAAAAAAAAA..." type="audio/mp3">
-  </audio>
-
+  <!-- Include alerts before timer logic -->
+  <script src="alerts.js"></script>
   <script src="timer.js"></script>
 </body>
 </html>
