--- a/index.html
+++ b/index.html
@@ -2,19 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="refresh" content="0; url=setup.html">
+  <meta http-equiv="refresh" content="0; url=landing.html">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Locked In — Loading…</title>
+  <title>LockedIn — Loading…</title>
+
   <script>
     // JS fallback redirect
-    window.location.replace('setup.html');
+    window.location.replace('landing.html');
   </script>
+
   <style>
-    html,body{height:100%}body{margin:0;display:grid;place-items:center;font-family:system-ui,Segoe UI,Roboto,Inter,Arial}
-    a{color:#0aa6c2;text-decoration:none}
+    html,body {
+      height: 100%;
+    }
+    body {
+      margin: 0;
+      display: grid;
+      place-items: center;
+      font-family: system-ui, Segoe UI, Roboto, Inter, Arial, sans-serif;
+      background: #0b1220;
+      color: #e5e7eb;
+    }
+    a {
+      color: #b388ff;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
-  <div>Redirecting to <a href="setup.html">Setup</a>…</div>
+  <div>Redirecting to <a href="landing.html">Landing</a>…</div>
 </body>
 </html>
