--- a/landing.html
+++ b/landing.html
@@ -8,47 +8,65 @@
   <link rel="stylesheet" href="landing.css" />
 </head>
 <body>
-  <header class="nav">
-    <div class="brand">
-      <span class="dot"></span>
-      <strong>LockedIn</strong>
-    </div>
+  <header class="nav" aria-label="Primary">
+    <a class="brand" href="index.html">
+      <span class="dot" aria-hidden="true"></span>
+      <span class="brand-text">LockedIn</span>
+    </a>
     <a class="pill" href="history.html">History</a>
   </header>
 
-  <main class="hero">
-    <!-- Framed media (desktop) / centered media (mobile) -->
+  <main class="hero" aria-label="LockedIn landing">
     <figure class="hero-frame">
-      <!-- If you ever add video sources, keep the <video>; for now just the GIF -->
       <img
-        id="heroImg"
-        class="hero-fallback"
+        class="hero-media"
         src="assets/landingpagegif.gif"
-        alt="LockedIn animation"
+        alt="Looping lock screen animation showing calming waves"
+        loading="eager"
+        decoding="async"
       />
+
+      <figcaption class="hero-overlay">
+        <div class="copy">
+          <h1 class="title">LockedIn</h1>
+          <p class="subtitle">Your focus ritual, ready in one swipe.</p>
+        </div>
+
+        <div class="swipe-zone" id="swipeZone">
+          <span class="swipe-hint" id="swipeHint">Swipe to Setup</span>
+          <div
+            id="swipeTrack"
+            class="swipe-track"
+            role="slider"
+            aria-label="Swipe to open setup"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            aria-valuenow="0"
+          >
+            <div
+              id="swipeGlow"
+              class="swipe-glow"
+              aria-hidden="true"
+            ></div>
+            <div
+              id="swipeKnob"
+              class="swipe-knob"
+              role="button"
+              tabindex="0"
+              aria-describedby="swipeHint"
+            >
+              <span class="chevron" aria-hidden="true">›</span>
+            </div>
+          </div>
+        </div>
+      </figcaption>
     </figure>
-
-    <div class="copy">
-      <h1>Get LockedIn.</h1>
-      <p>Clean focus timer. Smart breaks. Zero distractions.</p>
-    </div>
-
-    <!-- Swipe to Setup -->
-    <div class="swipe" id="swipe">
-      <div class="track" id="track">
-        <div class="hint">Swipe to Setup</div>
-        <div class="knob" id="knob" aria-label="Swipe to setup" role="button" tabindex="0"><span>›</span></div>
-      </div>
-    </div>
   </main>
 
+  <footer class="meta">
+    <small>Built for deep work. Works on desktop & mobile.</small>
+  </footer>
+
   <script src="landing.js"></script>
-  <script>
-    // If you’re only using a GIF (no <video>), ensure it shows:
-    (function(){
-      const img = document.getElementById('heroImg');
-      if (img) img.style.display = 'block'; // hero-fallback visible
-    })();
-  </script>
 </body>
 </html>
