--- a/timer.html
+++ b/timer.html
@@ -6,84 +6,6 @@
   <title>Locked In — Timer</title>
   <meta name="theme-color" content="#0f172a" />
   <link rel="stylesheet" href="timer.css" />
-
-  <!-- Enhanced lock animation styles (self-contained) -->
-  <style>
-    .lock-anim{
-      position:relative; display:flex; align-items:center; justify-content:center;
-      width:64px;height:64px;margin-left:10px; filter:drop-shadow(0 10px 18px rgba(0,0,0,.35));
-    }
-    .lock-svg{width:56px;height:56px;overflow:visible}
-    .lock-anim .shackle{stroke:#B388FF;fill:none;stroke-width:4;transform-box:fill-box;transform-origin:60px 54px}
-    .lock-anim .body{fill:rgba(255,255,255,.06);stroke:rgba(255,255,255,.10);stroke-width:2;transform-box:fill-box}
-    .lock-anim .keyhole{fill:#B388FF;transform-box:fill-box}
-    .lock-anim .glow{opacity:.45}
-
-    /* Orbital sweep ring (conic gradient) */
-    .lock-anim::before{
-      content:""; position:absolute; inset:-4px; border-radius:999px;
-      background:
-        conic-gradient(from var(--sweep,0deg),
-          rgba(179,136,255,.0) 0deg,
-          rgba(179,136,255,.35) 35deg,
-          rgba(179,136,255,.0) 85deg);
-      filter: blur(6px);
-      opacity:.7; pointer-events:none;
-      animation: sweep 2.8s linear infinite;
-    }
-    @keyframes sweep{
-      to { --sweep: 360deg; }
-    }
-
-    /* Sparkle glints */
-    .spark{
-      position:absolute; width:6px;height:6px;border-radius:999px;
-      background:radial-gradient(circle,#fff, #B388FF 60%, rgba(179,136,255,0) 70%);
-      opacity:.0; pointer-events:none;
-      animation: spark 2.8s ease-in-out infinite;
-    }
-    .spark.s1{ top:-4px; left:50%; transform:translateX(-50%); animation-delay:.2s }
-    .spark.s2{ right:-6px; top:40%; animation-delay:1.1s }
-    .spark.s3{ left:-6px; bottom:6px; animation-delay:2s }
-    @keyframes spark{
-      0%,60%{ opacity:0; transform:scale(.4) }
-      65%{ opacity:.85; transform:scale(1) }
-      100%{ opacity:0; transform:scale(.4) }
-    }
-
-    /* States */
-    .lock-anim.intro .shackle{animation:shackleClose .9s ease-out forwards}
-    .lock-anim.intro .body{animation:bodyPop .9s cubic-bezier(.2,.8,.2,1) .05s both}
-    .lock-anim.intro .keyhole{animation:keyPulse .9s ease-out .2s both}
-    .lock-anim.intro .glow{animation:glowPulse 1.4s ease-out .1s both}
-
-    /* Running: gentle breathing */
-    .lock-anim.run .body{animation:runPulse 2.4s ease-in-out infinite}
-    .lock-anim.run .shackle{transform:rotate(0deg)}
-
-    /* Paused: shackle opens a bit + subtle tilt */
-    .lock-anim.paused .shackle{animation:openHold .8s ease-out forwards}
-    .lock-anim.paused{ transform:rotate(-2deg) }
-
-    /* Reduced motion */
-    @media (prefers-reduced-motion:reduce){
-      .lock-anim::before, .spark, .lock-anim .body, .lock-anim .shackle, .lock-anim .keyhole, .lock-anim .glow{
-        animation:none !important;
-      }
-    }
-
-    @keyframes shackleClose{0%{transform:rotate(-24deg) translateY(-2px);opacity:.95}45%{transform:rotate(-6deg)}100%{transform:rotate(0)}}
-    @keyframes bodyPop{0%{transform:translateY(6px) scale(.92);opacity:0}60%{transform:translateY(0) scale(1.02);opacity:1}100%{transform:translateY(0) scale(1)}}
-    @keyframes keyPulse{0%{transform:scale(.7);opacity:.6}50%{transform:scale(1.08);opacity:1}100%{transform:scale(1)}}
-    @keyframes glowPulse{0%{opacity:.0;transform:scale(.9)}50%{opacity:.7;transform:scale(1.06)}100%{opacity:.45;transform:scale(1)}}
-    @keyframes runPulse{0%{transform:scale(1)}50%{transform:scale(1.03)}100%{transform:scale(1)}}
-    @keyframes openHold{0%{transform:rotate(0)}100%{transform:rotate(-10deg)}}
-
-    @media (max-width:480px){
-      .lock-anim{width:56px;height:56px}
-      .lock-svg{width:50px;height:50px}
-    }
-  </style>
 </head>
 <body>
   <div class="app card">
@@ -95,30 +17,20 @@
           <p class="muted">Tap the big clock to toggle Focus Mode.</p>
         </div>
 
-        <!-- Animated padlock -->
         <div id="headerLock" class="lock-anim intro run" aria-hidden="true">
-          <!-- glints -->
-          <span class="spark s1"></span>
-          <span class="spark s2"></span>
-          <span class="spark s3"></span>
-
           <svg class="lock-svg" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Lock visual">
-            <!-- soft glow -->
             <defs>
               <radialGradient id="g" cx="50%" cy="50%" r="50%">
-                <stop offset="0%"  stop-color="rgba(179,136,255,0.35)"/>
-                <stop offset="100%" stop-color="rgba(179,136,255,0)"/>
+                <stop offset="0%" stop-color="rgba(179,136,255,0.35)"></stop>
+                <stop offset="100%" stop-color="rgba(179,136,255,0)"></stop>
               </radialGradient>
             </defs>
-            <circle class="glow" cx="60" cy="60" r="42" fill="url(#g)"/>
-            <!-- shackle -->
-            <path class="shackle" d="M40 48 C40 30, 80 30, 80 48 L80 58" stroke-linecap="round"/>
-            <!-- body -->
-            <rect class="body" x="34" y="56" rx="10" ry="10" width="52" height="44"/>
-            <!-- keyhole -->
+            <circle class="glow" cx="60" cy="60" r="42" fill="url(#g)"></circle>
+            <path class="shackle" d="M40 48 C40 30, 80 30, 80 48 L80 58" stroke-linecap="round"></path>
+            <rect class="body" x="34" y="56" rx="10" ry="10" width="52" height="44"></rect>
             <g class="keyhole" transform="translate(60,78)">
-              <circle r="5"/>
-              <rect x="-2" y="5" width="4" height="10" rx="2"/>
+              <circle r="5"></circle>
+              <rect x="-2" y="5" width="4" height="10" rx="2"></rect>
             </g>
           </svg>
         </div>
@@ -131,25 +43,42 @@
     </header>
 
     <section id="timerPage" class="grid">
-      <section class="panel">
-        <div class="timer" id="timer">00:00:00</div>
-        <div class="sub" id="phaseLabel">Phase: Focus</div>
-        <div class="progress"><div id="bar" class="bar"></div></div>
+      <section class="panel panel-primary">
+        <div class="clock-shell" id="clockShell" aria-hidden="true">
+          <div class="timer" id="timer" role="button" tabindex="0" aria-label="Tap to toggle Focus Mode">00:00:00</div>
+        </div>
+
+        <div class="phase-meta">
+          <span class="phase-pill" id="phasePill">Focus</span>
+          <div class="sub" id="phaseLabel">Phase: Focus</div>
+        </div>
+
+        <div class="progress" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
+          <div id="bar" class="bar"></div>
+        </div>
+
         <div class="controls">
-          <button id="endEarly" class="btn btn-ghost" disabled>End</button>
           <button id="pauseResume" class="btn btn-ghost" disabled>Resume</button>
+          <button id="endEarly" class="btn btn-ghost" disabled>End</button>
           <button id="reset" class="btn btn-ghost">Reset</button>
           <button id="emergencyBtn" class="btn btn-ghost">Emergency</button>
           <button id="focusModeBtn" class="btn">Focus Mode</button>
         </div>
       </section>
 
-      <section class="panel">
-        <label class="label">Session info</label>
-        <div id="sessionInfo" class="history"></div>
+      <section class="panel panel-secondary">
+        <div class="section-heading">
+          <label class="label">Session overview</label>
+          <p class="note">These details stay pinned while you focus.</p>
+        </div>
+        <div id="sessionInfo" class="session-info"></div>
 
-        <label class="label" style="margin-top:12px">Session history</label>
+        <div class="section-heading" style="margin-top:18px;">
+          <label class="label">Recent sessions</label>
+          <p class="note">Track your consistency over time.</p>
+        </div>
         <div id="history" class="history"></div>
+
         <div class="actions">
           <a id="backToSetup" class="btn" href="#">↩ Back to Setup</a>
         </div>
@@ -178,65 +107,7 @@
   <!-- Quotes toast container -->
   <div id="toasts" class="toasts" aria-live="polite" aria-atomic="true"></div>
 
-  <!-- Include alerts before timer logic -->
   <script src="alerts.js"></script>
   <script src="timer.js"></script>
-
-  <!-- Lock state sync (no library) -->
-  <script>
-    (function(){
-      const lock = document.getElementById('headerLock');
-      const btn  = document.getElementById('pauseResume');
-      const phaseLabel = document.getElementById('phaseLabel');
-      if (!lock || !btn) return;
-
-      // Reflect run/paused from button label
-      const applyState = () => {
-        const label = (btn.textContent || '').trim().toLowerCase();
-        if (label === 'pause') {  // timer running
-          lock.classList.add('run');
-          lock.classList.remove('paused');
-        } else {
-          lock.classList.remove('run');
-          lock.classList.add('paused');
-        }
-      };
-      applyState();
-
-      const mo = new MutationObserver(applyState);
-      mo.observe(btn, { childList:true, characterData:true, subtree:true });
-
-      // Tint keyhole subtly based on phase (focus vs breaks)
-      const paintPhase = () => {
-        const txt = (phaseLabel.textContent || '').toLowerCase();
-        const keyhole = lock.querySelector('.keyhole');
-        if (!keyhole) return;
-        if (txt.includes('stand') || txt.includes('break')) {
-          keyhole.style.fill = '#7E57C2';   // deeper purple during breaks
-        } else {
-          keyhole.style.fill = '#B388FF';   // normal focus
-        }
-      };
-      const mo2 = new MutationObserver(paintPhase);
-      mo2.observe(phaseLabel, { childList:true, characterData:true, subtree:true });
-      paintPhase();
-
-      // Replay intro once (optional)
-      requestAnimationFrame(() => {
-        lock.classList.remove('intro');
-      });
-
-      // Show running state when Focus Overlay is visible
-      const minimal = document.getElementById('minimal');
-      if (minimal) {
-        const mo3 = new MutationObserver(() => {
-          const isHidden = minimal.getAttribute('aria-hidden') === 'true';
-          if (!isHidden) { lock.classList.add('run'); lock.classList.remove('paused'); }
-          else { applyState(); }
-        });
-        mo3.observe(minimal, { attributes:true, attributeFilter:['aria-hidden'] });
-      }
-    })();
-  </script>
 </body>
 </html>
